	Tests and benchmarks are also treated as executables, providing a
	quick way to pass them arguments.
	* Completed the 'new-bench' command (#3638). Same as above.
	* Completed the 'new-exec' command (#3638). Same as above.
	* Added a preliminary 'new-install' command (#4558, nonlocal exes
	part) which allows to quickly install executables from Hackage.
	* 'cabal update' now supports '--index-state' which can be used to
	roll back the index to an earlier state.
	* '--allow-{newer,older}' syntax has been enhanced. Dependency
	relaxation can be now limited to a specific release of a package,
	plus there's a new syntax for relaxing only caret-style (i.e. '^>=')
	dependencies (#4575, #4669).
	* New config file field: 'cxx-options' to specify which options to be
	passed to the compiler when compiling C++ sources specified by the
	'cxx-sources' field. (#3700)
	* New config file field: 'cxx-sources' to specify C++ files to be
	compiled separately from C source files. Useful in conjunction with the
	'cxx-options' flag to pass different compiler options to C and C++
	source files. (#3700)
	* Use [lfxtb] letters to differentiate component kind instead of
	opaque "c" in dist-dir layout.
	* 'cabal configure' now supports '--enable-static', which can be
	used to build static libaries with GHC via GHC's `-staticlib`
	flag.
	* 'cabal user-config now supports '--augment' which can append
	additional lines to a new or updated cabal config file.
	* Added support for '--enable-tests' and '--enable-benchmarks' to
	'cabal fetch' (#4948).
	* Misspelled package-names on CLI will no longer be silently
	case-corrected (#4778).
	* 'cabal new-configure' now backs up the old 'cabal.project.local'
	file if it exists (#4460).
	* On macOS, `new-build` will now place dynamic libraries into
	`store/lib` and aggressively shorten their names in an effort to
	stay within the load command size limits of macOSs mach-o linker.
	* 'new-build' now checks for the existence of executables for