@@ -15,6 +15,8 @@
 	* Completed the 'new-exec' command (#3638). Same as above.
 	* Added a preliminary 'new-install' command (#4558, nonlocal exes
 	part) which allows to quickly install executables from Hackage.
+	* Set symlink-bindir (used by new-install) to .cabal/bin by default on
+	.cabal/config initialization.
 	* 'cabal update' now supports '--index-state' which can be used to
 	roll back the index to an earlier state.
 	* '--allow-{newer,older}' syntax has been enhanced. Dependency
